# EchoNode-Harmony

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: verify.yml
docs/: architecture.md
mobile/flutter_app/: pubspec.yaml
mobile/flutter_app/lib/: main.dart
src/: __init__.py  config.py  echonode.py  erps_footprint.py  polyethical.py  sigma_pas.py
tests/: test_convergence.py
